--- a/bond/index.html
+++ b/bond/index.html
@@ -2,15 +2,16 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Turboludik</title>
+    <title>James Bond vs les parapluies sovitiques</title>
     <link rel="stylesheet" href="stylesheets/turboludik.css" />
 </head>
 <body>
     <div class="popup active" id="home-popup">
-        <h1>Turboludik</h1>
+        <h1>James Bond vs les parapluies sovitiques</h1>
         <div class="circles">
             <span class="circle"></span><span class="circle"></span><span class="circle"></span>
         </div>
+        <p><strong>James Bond contre les parapluies soviétiques</strong> est une merveilleuse aventure interactive basée sur <em>turboludik</em>.</p>
         <p>Pour visionner ce <strong>turboludik</strong>, vous avez besoin de Javascript et d'un navigateur récent.</p>
     </div>
     <script src="js/markdown.js"></script>
