--- a/bond/index.html
+++ b/bond/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>James Bond vs les parapluies sovitiques</title>
+    <title>James Bond vs les parapluies soviétiques</title>
     <link rel="stylesheet" href="stylesheets/turboludik.css" />
 </head>
 <body>
