--- a/bond/index.html
+++ b/bond/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="popup active" id="home-popup">
-        <h1>James Bond vs les parapluies sovitiques</h1>
+        <h1>James Bond vs les parapluies soviétiques</h1>
         <div class="circles">
             <span class="circle"></span><span class="circle"></span><span class="circle"></span>
         </div>
