--- a/krita/index.html
+++ b/krita/index.html
@@ -43,7 +43,7 @@
                     d'exploitation. Notez que, si vous êtes sous Linux, vous
                     avez le choix entre un fichier AppImage (qui fonctionne sur
                     toutes les distributions modernes) ou utliser votre
-                    gestionnaire de paquets (dnf, aptitude, pacman,...).
+                    gestionnaire de paquets (dnf, aptitude, pacman,…).
                 </p>
             </section>
             <section class="picture-right-layout">
