--- a/mononoke/index.html
+++ b/mononoke/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="groupe-strophe">
             <p class="strophe-synopsis">Le voici sur les routes, fidèle à ses idées. <br />
-            Il protège les faibles, quite à trancher des bras, <br />
+            Il protège les faibles, quitte à trancher des bras, <br />
             Son sabre est affûté, mais son cœur innocent. <br />
             Il rencontre Jiko, un moine vagabond <br />
             Qui décide de l'aider, il lui dit où aller : <br />
@@ -109,7 +109,7 @@
     <section id="la-forge">
         <h2>La forge Eboshi : un modèle de société dans le Japon féodal</h2>
         <p><em>Princesse Mononoké</em> se déroule dans le Japon médiéval à une époque où le pays, en proie à de nombreuses guerres de pouvoir, est soumi aux lois féodales. Dans ce monde violent et injuste où les pillages sont monnaie courrante, la société mise en place par Dame Eboshi est modèle. La population de la forge peut vivre dignement de sa production, contrairement aux paysans qu'Ashitaka a rencontré jusque là. Eboshi leur assure aussi la sécurité grâce à des armes technologiquement avancées, pour les protéger des attaques, d'où qu'elles viennent. Elle se soucie de son peuple et ne règne pas par la terreur.</p>
-        <p>La société de la forge est aussi résoluement féministe. Les femmes de la forge, avant d'être reccueillies par Dame Eboshi, étaient destinnées à la prostitution. Au contraire, elles ont ici le même pouvoir que les hommes. Autre symbole important : ce sont des femmes qui constituent les troupes d'élites de Dame Eboshi, celles-là mêmes qui assurent la sécurité du village.</p>
+        <p>La société de la forge est aussi résoluement féministe. Les femmes de la forge, avant d'être reccueillies par Dame Eboshi, étaient destinées à la prostitution. Au contraire, elles ont ici le même pouvoir que les hommes. Autre symbole important : ce sont des femmes qui constituent les troupes d'élites de Dame Eboshi, celles-là mêmes qui assurent la sécurité du village.</p>
         <figure>
             <img src="imgs/eboshi.jpg" alt="Dame Eboshi" />
             <figcaption>Dame Eboshi, une dirigeante moderne</figcaption>
