--- a/mononoke/index.html
+++ b/mononoke/index.html
@@ -185,7 +185,7 @@
     </section>
 
     <footer>
-        Réalisé avec un <span>🖮</span> par Mathis Dubrul pour le cours de M. Thérasse.
+        Réalisé avec un <span>⌨</span> par Mathis Dubrul pour le cours de M. Therasse.
     </footer>
     </body>
 </html>
