--- a/index.html
+++ b/index.html
@@ -4,15 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Matouche's sandbox − Mathis Dubrul</title>
-</head>
+    <title>Mathis Dubrul - Animateur/Illustrateur 2D</title>
+    <link rel="stylesheet" href="normalize.css"><link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
+    <style>
+        .wrapper {
+          margin: 5rem;
+        }
+    </style>
 <body>
-    <h1>Matouche's sandbox − Mathis Dubrul</h1>
-    <ul>
-        <li><a href="https://vimeo.com/user12625616">Vimeo</a></li>
-        <li><a href="https://www.artstation.com/matouche">ArtStation</a></li>
-        <li><a href="https://zestedesavoir.com/tutoriels/672/reprenez-le-controle-de-vos-feuilles-de-style-avec-sass/">Tuto Sass (fr)</a></li>
-        <li><a href="https://github.com/Matouche">GitHub</a></li>
-    </ul>
+    <div class="wrapper">
+        <h1>Mathis Dubrul - Portfolio</h1>
+        <p>Étudiant en 2e année en Animation 2D et Illustration Numérique à la Haute École Albert Jacquard</p>
+        <p>Mon portfolio est encore en construction, veuillez m'excuser pour le désagrément.</p>
+        <p><strong>Fin des travaux prévue pour le 21 juin au plus tard, n'hésitez pas à revenir.</strong></p>
+        <p>En attendant, vous pouvez dès à présent regarder mon Travail de Fin d'Année en Animation 2D, <a href="https://ncloud.zaclys.com/index.php/s/6n4Bg8mKRm6AgGA">LITTLE AGENT</a>.</p>
+        <!--<video tabindex="0" controls="" style="max-width: 1024px">
+            <source src="https://ncloud.zaclys.com/index.php/s/6n4Bg8mKRm6AgGA/download">
+            <a href="https://ncloud.zaclys.com/index.php/s/6n4Bg8mKRm6AgGA">Lien direct</a>
+        </video>-->
+        <p>
+            À bientôt au Career's day,<br />
+            Mathis Dubrul
+        </p>
+    </div>
 </body>
 </html>
