Video avec mot de passe

--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
         <p>Étudiant en 2e année en Animation 2D et Illustration Numérique à la Haute École Albert Jacquard</p>
         <p>Mon portfolio est encore en construction, veuillez m'excuser pour le désagrément.</p>
         <p><strong>Fin des travaux prévue pour le 21 juin au plus tard, n'hésitez pas à revenir.</strong></p>
-        <p>En attendant, vous pouvez dès à présent regarder mon Travail de Fin d'Année en Animation 2D, <a href="https://ncloud.zaclys.com/index.php/s/6n4Bg8mKRm6AgGA">LITTLE AGENT</a>.</p>
-        <!--<video tabindex="0" controls="" style="max-width: 1024px">
-            <source src="https://ncloud.zaclys.com/index.php/s/6n4Bg8mKRm6AgGA/download">
-            <a href="https://ncloud.zaclys.com/index.php/s/6n4Bg8mKRm6AgGA">Lien direct</a>
-        </video>-->
+        <p>En attendant, vous pouvez dès à présent regarder mon Travail de Fin d'Année en Animation 2D, <a href="https://ncloud.zaclys.com/index.php/s/6n4Bg8mKRm6AgGA">LITTLE AGENT</a> (mot de passe : <em>juin2018</em>).</p>
         <p>
             À bientôt au Career's day,<br />
             Mathis Dubrul
