Generate Pelican site

--- a/bord-de-mer.html
+++ b/bord-de-mer.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-        <title>Mathis Dubrul - Authors</title>
+        <title> Mathis Dubrul - Bord de mer </title>
 
         <link rel="stylesheet" href="https://matouche.github.io/theme/css/main.css?909d8ee5">
 
@@ -20,15 +20,34 @@
  <small class="subtitle"> Étudiant Animateur / Illustrateur 2D</small>                 </a></h1>
                 <nav class="menu">
                         <a  href="https://matouche.github.io/category/animation.html">Animation</a>
-                        <a  href="https://matouche.github.io/category/illustration.html">Illustration</a>
+                        <a  class="active" href="https://matouche.github.io/category/illustration.html">Illustration</a>
                 </nav>
             </header>
 
             <section class="content">
-    <h1>Authors on Mathis Dubrul</h1>
 
-    <ul>        <li><a href="https://matouche.github.io/author/mathis-dubrul.html">Mathis Dubrul</a> (7)</li>
-    </ul>
+<article>
+        <header>
+            <h1 class="article_title">
+            <a href="https://matouche.github.io/bord-de-mer.html" rel="bookmark"
+            title="Permalien vers Bord de mer">
+                Bord de mer
+            </a></h1>
+            <p class ="info">
+                Publié le sam. 17 mars 2018 par
+                        <a class="url fn"
+                        href="https://matouche.github.io/author/mathis-dubrul.html">Mathis Dubrul</a>
+                dans <a href="https://matouche.github.io/category/illustration.html">
+                    Illustration</a>.
+            </p>
+        </header>
+
+    <div class="article_content">
+        <p><img alt="Phare" src="https://cdnb.artstation.com/p/assets/images/images/009/855/747/large/mathis-dubrul-dubrul-mathis-b2h1-compo2.jpg?1521237350">
+<img alt="Ville Portuaire" src="https://cdna.artstation.com/p/assets/images/images/009/960/428/large/mathis-dubrul-dubrul-mathis-b2h1-compo-1.jpg?1521787157"></p>
+<p>Même lieu mais 2 compositions en opposition.</p>
+    </div>
+</article>
             </section>
 
             <div class="extra">
