--- a/cherchez-la-chevre.html
+++ b/cherchez-la-chevre.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-        <title>Mathis Dubrul - Authors</title>
+        <title> Mathis Dubrul - Cherchez la chèvre </title>
 
         <link rel="stylesheet" href="https://matouche.github.io/theme/css/main.css?909d8ee5">
 
@@ -20,15 +20,36 @@
  <small class="subtitle"> Étudiant Animateur / Illustrateur 2D</small>                 </a></h1>
                 <nav class="menu">
                         <a  href="https://matouche.github.io/category/animation.html">Animation</a>
-                        <a  href="https://matouche.github.io/category/illustration.html">Illustration</a>
+                        <a  class="active" href="https://matouche.github.io/category/illustration.html">Illustration</a>
                 </nav>
             </header>
 
             <section class="content">
-    <h1>Authors on Mathis Dubrul</h1>
 
-    <ul>        <li><a href="https://matouche.github.io/author/mathis-dubrul.html">Mathis Dubrul</a> (7)</li>
-    </ul>
+<article>
+        <header>
+            <h1 class="article_title">
+            <a href="https://matouche.github.io/cherchez-la-chevre.html" rel="bookmark"
+            title="Permalien vers Cherchez la chèvre">
+                Cherchez la chèvre
+            </a></h1>
+            <p class ="info">
+                Publié le jeu. 05 octobre 2017 par
+                        <a class="url fn"
+                        href="https://matouche.github.io/author/mathis-dubrul.html">Mathis Dubrul</a>
+                dans <a href="https://matouche.github.io/category/illustration.html">
+                    Illustration</a>.
+            </p>
+        </header>
+
+    <div class="article_content">
+        <p><img alt="La chèvre au soleil" src="https://cdna.artstation.com/p/assets/images/images/008/611/266/large/mathis-dubrul-exo2-je-dubrul-mathis-b2h1.jpg"></p>
+<p><img alt="La chèvre dans la nuit" src="https://cdnb.artstation.com/p/assets/images/images/008/611/263/large/mathis-dubrul-exo2-n-dubrul-mathis-b2h1.jpg"></p>
+<p><img alt="La chèvre sous la pluie" src="https://cdna.artstation.com/p/assets/images/images/008/611/264/large/mathis-dubrul-exo2-jp-dubrul-mathis-b2h1.jpg"></p>
+<p><img alt="La chèvre au soleil couchant" src="https://cdnb.artstation.com/p/assets/images/images/008/611/269/large/mathis-dubrul-exo2-cs-dubrul-mathis-b2h1.jpg"></p>
+<p>Un même décor en plans rabattus mais à quatre moments différents.</p>
+    </div>
+</article>
             </section>
 
             <div class="extra">
