--- a/peur-bleue.html
+++ b/peur-bleue.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-        <title>Mathis Dubrul - Authors</title>
+        <title> Mathis Dubrul - Peur bleue </title>
 
         <link rel="stylesheet" href="https://matouche.github.io/theme/css/main.css?909d8ee5">
 
@@ -19,16 +19,36 @@
                         Mathis Dubrul
  <small class="subtitle"> Étudiant Animateur / Illustrateur 2D</small>                 </a></h1>
                 <nav class="menu">
-                        <a  href="https://matouche.github.io/category/animation.html">Animation</a>
+                        <a  class="active" href="https://matouche.github.io/category/animation.html">Animation</a>
                         <a  href="https://matouche.github.io/category/illustration.html">Illustration</a>
                 </nav>
             </header>
 
             <section class="content">
-    <h1>Authors on Mathis Dubrul</h1>
 
-    <ul>        <li><a href="https://matouche.github.io/author/mathis-dubrul.html">Mathis Dubrul</a> (7)</li>
-    </ul>
+<article>
+        <header>
+            <h1 class="article_title">
+            <a href="https://matouche.github.io/peur-bleue.html" rel="bookmark"
+            title="Permalien vers Peur bleue">
+                Peur bleue
+            </a></h1>
+            <p class ="info">
+                Publié le ven. 10 novembre 2017 par
+                        <a class="url fn"
+                        href="https://matouche.github.io/author/mathis-dubrul.html">Mathis Dubrul</a>
+                dans <a href="https://matouche.github.io/category/animation.html">
+                    Animation</a>.
+            </p>
+        </header>
+
+    <div class="article_content">
+        <p><a href="https://ncloud.zaclys.com/index.php/s/wDyL3DKqecB9Mic"><img alt="Peur bleue" src="https://matouche.github.io/images/peur_bleue.jpg"></a></p>
+<p>Zootrope en volume construit en groupe avec Andrea Mondadori, Ayité Ajavon, Gaëlle De Jesus Silva, Marie Royer et Zinia Scorier.<br>
+J'ai plus particulièrement réalisé l'animation des visages sous le lit et participé à l'animation du bras.</p>
+<p>Cliquez sur l'image pour le voir en mouvement !</p>
+    </div>
+</article>
             </section>
 
             <div class="extra">
