--- a/tags.html
+++ b/tags.html
@@ -1,23 +1,49 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-        <title>Mathis Dubrul - Animateur/Illustrateur 2D - Tags</title>
+    <head>
         <meta charset="utf-8" />
-        <link href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Mathis Dubrul - Animateur/Illustrateur 2D Full Atom Feed" />
-</head>
+        <title>Mathis Dubrul - Tags</title>
 
-<body id="index" class="home">
-        <header id="banner" class="body">
-                <h1><a href="https://matouche.github.io/">Mathis Dubrul - Animateur/Illustrateur 2D <strong></strong></a></h1>
-        </header><!-- /#banner -->
-        <nav id="menu"><ul>
-            <li><a href="https://matouche.github.io/">Mathis Dubrul - Portfolio</a></li>
-        </ul></nav><!-- /#menu -->
-    <h1>Tags for Mathis Dubrul - Animateur/Illustrateur 2D</h1>        <footer id="contentinfo" class="body">
-                <address id="about" class="vcard body">
-                Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
-                which takes great advantage of <a href="http://python.org">Python</a>.
-                </address><!-- /#about -->
-        </footer><!-- /#contentinfo -->
-</body>
+        <link rel="stylesheet" href="https://matouche.github.io/theme/css/main.css?909d8ee5">
+
+        <link href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Mathis Dubrul Atom Feed" />
+
+        <!--[if IE]>
+            <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+    </head>
+    <body>
+        <div class="wrapper">
+            <header>
+                <h1 class="banner"><a href="https://matouche.github.io">
+                        Mathis Dubrul
+ <small class="subtitle"> Étudiant Animateur / Illustrateur 2D</small>                 </a></h1>
+                <nav class="menu">
+                        <a  href="https://matouche.github.io/category/animation.html">Animation</a>
+                        <a  href="https://matouche.github.io/category/illustration.html">Illustration</a>
+                </nav>
+            </header>
+
+            <section class="content">
+    <h1>Tags for Mathis Dubrul</h1>            </section>
+
+            <div class="extra">
+                    <div class="about">
+                            <h2>À propos</h2>
+                            <p class="description">
+                                Je suis étudiant en 2ème année à la Haute École Albert Jacquard.
+                 J'aime bien le cinéma d'animation.
+                            </p>
+                            <ul class="social">
+                                    <li><a href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">Atom</a></li>
+                                    <li><a href="https://vimeo.com/user12625616">Vimeo</a></li>
+                                    <li><a href="https://matouche.artstation.com">ArtStation</a></li>
+                            </ul>
+                    </div>
+            </div>
+            <footer class="footer">
+                Propulsé par Pelican.
+            </footer>
+        </div>
+    </body>
 </html>
