Generate Pelican site

--- a/bord-de-mer.html
+++ b/bord-de-mer.html
@@ -2,13 +2,23 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-        <title> Mathis Dubrul - Bord de mer </title>
 
         <link rel="stylesheet" href="https://matouche.github.io/theme/css/main.css?909d8ee5">
-
         <link href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Mathis Dubrul Atom Feed" />
-
         <link rel="icon" type="image/png" href="https://matouche.github.io/images/favicon.png" />
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+
+        <title>Bord de mer - Mathis Dubrul</title>
+        <meta name="description" content="Même lieu mais 2 compositions en opposition." />
+        <meta name="author" content="Mathis Dubrul" />
+        <meta name="og:site_name" content="Mathis Dubrul">
+        <meta name="og:title" content="Bord de mer - Mathis Dubrul" />
+        <meta name="og:description" content="Même lieu mais 2 compositions en opposition." />
+        <meta name="og:type" content="article" />
+        <meta name="og:image" content="images/favicon.png" />
+        <link rel="canonical" href="https://matouche.github.io/bord-de-mer.html" />
+        <meta name="og:url" content="https://matouche.github.io/bord-de-mer.html" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
