--- a/little-agent.html
+++ b/little-agent.html
@@ -2,13 +2,25 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-        <title> Mathis Dubrul - Little Agent </title>
 
         <link rel="stylesheet" href="https://matouche.github.io/theme/css/main.css?909d8ee5">
-
         <link href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Mathis Dubrul Atom Feed" />
-
         <link rel="icon" type="image/png" href="https://matouche.github.io/images/favicon.png" />
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+
+        <title>Little Agent - Mathis Dubrul</title>
+        <meta name="description" content="Synopsis Little Agent raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le Roi d’une tentative aussi diabolique que ridicule d’attentat par un savant plus fou que
+méchant. Pour empêcher le régicide, notre héros coupe court à ses vacances et fait fi de …" />
+        <meta name="author" content="Mathis Dubrul" />
+        <meta name="og:site_name" content="Mathis Dubrul">
+        <meta name="og:title" content="Little Agent - Mathis Dubrul" />
+        <meta name="og:description" content="Synopsis Little Agent raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le Roi d’une tentative aussi diabolique que ridicule d’attentat par un savant plus fou que
+méchant. Pour empêcher le régicide, notre héros coupe court à ses vacances et fait fi de …" />
+        <meta name="og:type" content="article" />
+        <meta name="og:image" content="images/favicon.png" />
+        <link rel="canonical" href="https://matouche.github.io/little-agent.html" />
+        <meta name="og:url" content="https://matouche.github.io/little-agent.html" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
