--- a/peur-bleue.html
+++ b/peur-bleue.html
@@ -2,13 +2,25 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-        <title> Mathis Dubrul - Peur bleue </title>
 
         <link rel="stylesheet" href="https://matouche.github.io/theme/css/main.css?909d8ee5">
-
         <link href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Mathis Dubrul Atom Feed" />
-
         <link rel="icon" type="image/png" href="https://matouche.github.io/images/favicon.png" />
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+
+        <title>Peur bleue - Mathis Dubrul</title>
+        <meta name="description" content="Zootrope en volume construit en groupe avec Andrea Mondadori, Ayité Ajavon, Gaëlle De Jesus Silva, Marie Royer et Zinia Scorier. J'ai plus particulièrement réalisé l'animation des visages sous le lit
+et participé à l'animation du bras. Cliquez sur l'image pour le voir en mouvement !" />
+        <meta name="author" content="Mathis Dubrul" />
+        <meta name="og:site_name" content="Mathis Dubrul">
+        <meta name="og:title" content="Peur bleue - Mathis Dubrul" />
+        <meta name="og:description" content="Zootrope en volume construit en groupe avec Andrea Mondadori, Ayité Ajavon, Gaëlle De Jesus Silva, Marie Royer et Zinia Scorier. J'ai plus particulièrement réalisé l'animation des visages sous le lit
+et participé à l'animation du bras. Cliquez sur l'image pour le voir en mouvement !" />
+        <meta name="og:type" content="article" />
+        <meta name="og:image" content="images/favicon.png" />
+        <link rel="canonical" href="https://matouche.github.io/peur-bleue.html" />
+        <meta name="og:url" content="https://matouche.github.io/peur-bleue.html" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
